Adding pkgs, user creation, and cron

--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,6 @@
   become: true
 
   tasks:
-    # - include: tasks/users.yml
-    # - include: tasks/cron.yml
+    - include: tasks/users.yml
+    - include: tasks/cron.yml
     - include: tasks/packages.yml
