Hopefully a proper fix.

--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -8,5 +8,5 @@
     src: files/sudoers_ansible
     dest: /usr/local/etc/sudoers.d/ansible
     owner: root
-    group: root
+    group: wheel
     mode: 0440
