--- a/local.yml
+++ b/local.yml
@@ -4,5 +4,6 @@
 
   tasks:
     - include: tasks/packages.yml
+    - include: tasks/dotfiles.yml
     - include: tasks/users.yml
     - include: tasks/cron.yml
