--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,8 +1,16 @@
-- name: Making ~/.vim directory
-  ansible.builtin.file:
-    path: /home/dang/.vim
-    state: directory
-    mode: '0755'
+# - name: Making ~/.vim directory
+#   ansible.builtin.file:
+#     path: /home/dang/.vim
+#     state: directory
+#     mode: '0755'
+
+# - name: Making ~/.vim/autoload directory (plugin manager)
+#   ansible.builtin.file:
+#     path: /home/dang/.vim/autoload
+#     state: directory
+#     mode: '0755'
+- name: Setting up vim plugin manager
+  ansible.bultin.command: curl -fLo /home/dang/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 - name: Setting vimrc
   copy:
