--- a/local.yml
+++ b/local.yml
@@ -4,6 +4,6 @@
 
   tasks:
     - include: tasks/packages.yml
-    - include: tasks/dotfiles.yml
+    - include: tasks/configuration.yml
     - include: tasks/users.yml
     - include: tasks/cron.yml
